--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<div class="col-sm-12">
 									<section class="header-info">
 										<h1 class="applicant"><span class="applicant-name first-name">Phan Dinh </span><span class="applicant-name last-name">Thinh</span></h1>
-										<h4 class="career">IT Developer</h4>
+										<h4 class="career">Web Application Developer</h4>
 									</section>
 								</div>
 							</div>
