--- a/index.html
+++ b/index.html
@@ -90,14 +90,22 @@
 														<div class="education-item">
 															<h5 class="item-title">iOS Mobile Application Deveper</h5>
 															<div class="item-info item-info-title">ECEP Group | Sep 2015 - Oct 2016</div>
-															<div class="item-info info-content">Participate in develop iOS mobile app project by Objective C programming langauage <a href="https://appadvice.com/app/mcampus-for-iphone/1059214723" target="_blank">(mCampus App)</a></div>
+															<div class="item-info info-content">
+																<ul>
+																	<li>Participate in develop iOS mobile app project by Objective C programming langauage <a href="https://appadvice.com/app/mcampus-for-iphone/1059214723" target="_blank">(mCampus App)</a></li>
+																</ul>
+															</div>
 														</div>
 													</div>
 													<div class="col-md-12">
 														<div class="education-item">
 															<h5 class="item-title">Front-End Intern</h5>
 															<div class="item-info item-info-title">CO2 Company | Jun 2015 - July 2015</div>
-															<div class="item-info info-content">Learn HTML5/CSS3/JS, practice convert PSD file to HTML</div>
+															<div class="item-info info-content">
+																<ul>
+																	<li>Learn HTML5/CSS3/JS, practice convert PSD file to HTML</li>
+																</ul>
+															</div>
 														</div>
 													</div>
 												</div>
