--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Thinh Phan - Curriculum Vitae</title>
-	
+
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
 	<!-- Fontawesome -->
@@ -61,7 +61,7 @@
 							<div class="row">
 								<div class="col-sm-12">
 									<section class="header-info">
-										<h1 class="applicant"><span class="applicant-name first-name">Phan Dinh </span><span class="applicant-name last-name">Thinh</span></h1>
+										<h1 class="applicant"><span class="applicant-name first-name">Dinh Thinh</span><span class="applicant-name last-name">Phan</span></h1>
 										<h4 class="career">Web Application Developer</h4>
 									</section>
 								</div>
@@ -82,6 +82,7 @@
 																	<li>Participate in develop Community site project with Wordpress.</li>
 																	<li>Develop Crawler data script by Java (use Jsoup library)</li>
 																	<li>Participate in develop LCMS (Learning Content Management System) project with PHP Laravel Framework.</li>
+																	<li>Analyzed requirements and used systematic approaches to implement and document the tasks.</li>
 																</ul>
 															</div>
 														</div>
@@ -93,6 +94,7 @@
 															<div class="item-info info-content">
 																<ul>
 																	<li>Participate in develop iOS mobile app project by Objective C programming langauage <a href="https://appadvice.com/app/mcampus-for-iphone/1059214723" target="_blank">(mCampus App)</a></li>
+																	<li>Test and document code.</li>
 																</ul>
 															</div>
 														</div>
@@ -125,14 +127,14 @@
 															<div class="education-item">
 																<h5 class="item-title">infomation technology bachelor diploma</h5>
 																<div class="item-info item-info-title">Nha Trang University | 2011 - 2015</div>
-																<div class="item-info">nha trang city, khanh hoa province</div>
+																<div class="item-info black-color-text"><span class="address"><i class="fas fa-map-marker-alt"></i></span>nha trang city, khanh hoa province</div>
 															</div>
 														</div>
 														<div class="col-md-12">
 															<div class="education-item">
 																<h5 class="item-title">highschool</h5>
 																<div class="item-info item-info-title">nguyen tran highschool | 2008 - 2011</div>
-																<div class="item-info">hoai nhon district, binh dinh province</div>
+																<div class="item-info black-color-text"><span class="address"><i class="fas fa-map-marker-alt"></i></span>hoai nhon district, binh dinh province</div>
 															</div>
 														</div>
 													</div>
