--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 															<div class="item-info info-content">
 																<ul>
 																	<li>Participate in develop Community site project with Wordpress.</li>
-																	<li>Develop Crawler data script by Java (use Jsoup library)</li>
+																	<li>Develop Crawler data script by Java programming langauage (use Jsoup library)</li>
 																	<li>Participate in develop LCMS (Learning Content Management System) project with PHP Laravel Framework.</li>
 																	<li>Analyzed requirements and used systematic approaches to implement and document the tasks.</li>
 																</ul>
