--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <figure class="figure">
                         <div class="avatar-wrapper">
                             <div class="avatar">
-                                <img src="assets/images/avatar.png" class="figure-img img-fluid rounded"
+                                <img src="assets/images/avatar.jpg" class="figure-img img-fluid rounded"
                                      alt="A generic square placeholder image with rounded corners in a figure.">
                             </div>
                         </div>
@@ -53,6 +53,120 @@
                             <span class="personal-info">9B, Nhi Ha, Phuoc Hoa, Nha Trang, Khanh Hoa</span>
                         </figcaption>
                     </figure>
+                    <!-- BEGIN: Summary -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <section class="item-section summary-section">
+                                <h2 class="subtitle fancy"><span>Summary</span></h2>
+                                <article>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="skill-item">
+                                                <div class="info-content">
+                                                    <span>I have had experience in HTML5/CSS3/JS, Bootstrap, AngularJs 1+ years, Web application development with PHP Laravel framework  in 1+ year, Wordpress 6 months, build script to crawler data with java (Jsoup library), iOS mobile application development with Objective C in 6+ months.</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </article>
+                            </section>
+                        </div>
+                    </div>
+                    <!-- END: Summary -->
+                    <!-- BEGIN: Skills -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <section class="item-section education-section">
+                                <h2 class="subtitle fancy"><span>Skills</span></h2>
+                                <article>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="skill-item">
+                                                <h5 class="item-title">programming languages and tools</h5>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>HTML5/CSS3, Jquery, Ajax, SASS, LESS, Bootstrap, AngularJS</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>
+                                                        PHP Laravel Framework, Wordpress
+                                                    </span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>
+                                                        MySQL
+                                                    </span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Objective C, Java</span>
+                                                </div>
+                                            </div>
+                                            <div class="skill-item">
+                                                <h5 class="item-title">workflow</h5>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Apache Subversion (SVN)</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Version Control/Git</span>
+                                                </div>
+                                            </div>
+                                            <div class="skill-item">
+                                                <h5 class="item-title">soft skills</h5>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Communication</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Teamwork</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Adaptability</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Problem-Solving</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
+                                                    <span>Creativity</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </article>
+                            </section>
+                        </div>
+                    </div>
+                    <!-- END: Skills -->
                 </div>
             </div>
             <!-- END: Left content -->
@@ -70,11 +184,11 @@
                         </div>
                     </div>
 
+                    <!-- BEGIN: Experiences -->
                     <div class="row">
-                        <!-- BEGIN: Experiences -->
                         <div class="col-sm-12">
                             <section class="item-section experiences-section">
-                                <h2 class="subtitle fancy"><span>Experience</h2>
+                                <h2 class="subtitle fancy"><span>Experience</span></h2>
                                 <article>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -136,13 +250,12 @@
                             </section>
                         </div>
                     </div>
-                    </span>
                     <!-- END: Experiences -->
                     <!-- BEGIN: Education -->
                     <div class="row">
                         <div class="col-sm-12">
                             <section class="item-section education-section">
-                                <h2 class="subtitle fancy"><span>education</h2>
+                                <h2 class="subtitle fancy"><span>education</span></h2>
                                 <article>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -175,6 +288,30 @@
                         </div>
                     </div>
                     <!-- END: Education -->
+                    <!-- BEGIN: Interest -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <section class="item-section education-section">
+                                <h2 class="subtitle fancy"><span>Interest</span></h2>
+                                <article>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="interest-item">
+                                                <div class="item-content">
+                                                    In addition to my passion for technology, I like to travel and
+                                                    explore wherever I have a long vacation. Beside that I often go to
+                                                    football with my friends, play games, read books.<br/>
+                                                    I like tinkering, learning about new technology, modern when I have
+                                                    free time
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </article>
+                            </section>
+                        </div>
+                    </div>
+                    <!-- END: Interest -->
                 </div>
             </div>
             <!-- END: Right content -->
