- Update Demo projects

--- a/index.html
+++ b/index.html
@@ -200,13 +200,14 @@
                                                 <div class="item-info info-content">
                                                     <ul>
                                                         <li>Participate in develop Community site project with
-                                                            Wordpress.
+                                                            Wordpress. (Projects demo: <a href="http://ilearnvn.org/" target="_blank">Ilearnvn website</a>, <a href="http://moocsnews.com/">Moocsnews website</a>)
                                                         </li>
                                                         <li>Develop Crawler data script by Java programming langauage
                                                             (use Jsoup library)
                                                         </li>
-                                                        <li>Participate in develop LCMS (Learning Content Management
-                                                            System) project with PHP Laravel Framework.
+                                                        <li>Buil web application with PHP Laravel Framework (Projects demo: <a href="http://www.sinhthanhan.com/">Sinh Thanh An website</a>, <a href="http://www.vantaihoangduong.vn/">Van Tai Hoang Duong website</a> )
+                                                        </li>
+                                                        <li>Participate in develop e-learning site with Chamilo LMS (Projects demo: <a href="http://vcampus.ecepvn.org/">vCampus Website</a>)
                                                         </li>
                                                         <li>Analyzed requirements and used systematic approaches to
                                                             implement and document the tasks.
