- Add skill item

--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
                                                     <span class="c-icon">
                                                         <i class="fas fa-check"></i>
                                                     </span>
+                                                    <span>Googling</span>
+                                                </div>
+                                                <div class="info-content">
+                                                    <span class="c-icon">
+                                                        <i class="fas fa-check"></i>
+                                                    </span>
                                                     <span>Adaptability</span>
                                                 </div>
                                                 <div class="info-content">
