--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
                                         <div class="col-md-12">
                                             <div class="skill-item">
                                                 <div class="info-content">
-                                                    <span>I have had experience in HTML5/CSS3/JS, Bootstrap, AngularJs 1+ years, Web application development with PHP Laravel framework  in 1+ year, Wordpress 6 months, build script to crawler data with java (Jsoup library), iOS mobile application development with Objective C in 6+ months.</span>
+                                                    <p>I have had experience in HTML5/CSS3/JS, Bootstrap, AngularJs 1+ years.</p>
+                                                    <p> Web application development with PHP Laravel framework  in 1+ year.</p>
+                                                    <p> Wordpress 6 months, build script to crawler data with java (Jsoup library).</p>
+                                                    <p> iOS mobile application development with Objective C in 6+ months.</p>
                                                 </div>
                                             </div>
                                         </div>
