--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                         <div class="col-md-12">
                                             <div class="education-item">
                                                 <h5 class="item-title">Web Application Developer</h5>
-                                                <div class="item-info item-info-title">ECEP Group | Nov 2016 - Sep
+                                                <div class="item-info item-info-title"><a href="https://ecepvn.org/" target="_blank">ECEP Team</a> | Nov 2016 - Sep
                                                     2018
                                                 </div>
                                                 <div class="item-info info-content">
@@ -228,7 +228,7 @@
                                         <div class="col-md-12">
                                             <div class="education-item">
                                                 <h5 class="item-title">iOS Mobile Application Deveper</h5>
-                                                <div class="item-info item-info-title">ECEP Group | Sep 2015 - Oct
+                                                <div class="item-info item-info-title"><a href="https://ecepvn.org/" target="_blank">ECEP Team</a> | Sep 2015 - Oct
                                                     2016
                                                 </div>
                                                 <div class="item-info info-content">
