--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
                 </figcaption>
                 <figcaption class="figure-caption">
                   <span class="icon-wrapper"
+                    ><i class="fas fa-birthday-cake"></i
+                  ></span>
+                  <span class="personal-info">06-03-1993</span>
+                </figcaption>
+                <figcaption class="figure-caption">
+                  <span class="icon-wrapper"
                     ><i class="fas fa-mobile-alt"></i
                   ></span>
                   <span class="personal-info">037 606 9915</span>
