--- a/index.html
+++ b/index.html
@@ -83,8 +83,14 @@
                             <div class="info-content">
                               <p>
                                 I have had experience in
-                                <strong>HTML5/CSS3/JS</strong>, <strong>Bootstrap</strong>, <strong>JQuery</strong>,
-                                <strong>AngularJS</strong>, <strong>ReactJS</strong> 4+ years.
+                                <strong>HTML5/CSS3/JS</strong>, <strong>Bootstrap</strong>,
+                                <strong>Material UI</strong>, <strong>JQuery</strong>, <strong>ReactJS</strong> 5+
+                                years, <strong>NextJS</strong> 2+, <strong>AngularJS</strong>,
+                                <strong>VueJS</strong> +1,
+                              </p>
+                              <p>
+                                Web application development with
+                                <strong>NodeJS</strong> in 2+ year. Work with Express, NestJS frameworks.
                               </p>
                               <p>
                                 Web application development with
@@ -103,10 +109,6 @@
                                 Web application development with
                                 <strong>Ruby on Rails</strong>
                                 in 6+ months.
-                              </p>
-                              <p>
-                                Web application development with
-                                <strong>NodeJS</strong> in 2+ year.
                               </p>
                             </div>
                           </div>
@@ -131,7 +133,7 @@
                               <span class="c-icon">
                                 <i class="fas fa-check"></i>
                               </span>
-                              <span>HTML5/CSS3, Jquery, Ajax, SASS, LESS, Bootstrap, AngularJS, ReactJS</span>
+                              <span>HTML5/CSS3, Jquery, Ajax, SASS, LESS, Bootstrap, AngularJS, ReactJS, NodeJS</span>
                             </div>
                             <div class="info-content">
                               <span class="c-icon">
@@ -143,7 +145,7 @@
                               <span class="c-icon">
                                 <i class="fas fa-check"></i>
                               </span>
-                              <span> MySQL </span>
+                              <span> MySQL, Postgresql, MongoDB </span>
                             </div>
                             <div class="info-content">
                               <span class="c-icon">
@@ -258,6 +260,41 @@
                               <ul>
                                 <li>
                                   Work freelance with ReactJS, AngularJS, and VueJS with clients Singapore, Vietnam
+                                </li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- DEEPCACTUS -->
+                        <div class="col-md-12">
+                          <div class="education-item">
+                            <h5 class="item-title">Frontend Developer</h5>
+                            <div class="item-info item-info-title">
+                              <a href="javscript:;">DEEPCACTUS Ltd, Hanoi - Vietnam Company</a>
+                              | Aug 2021 - Present
+                            </div>
+                            <div>
+                              A start-up digital advertiser, marketing, recommendation company. Specializes in platforms
+                              such as: <strong>DMP</strong> (Data Management Platform),
+                              <strong>DSP</strong> (Demand-Side Platform) and <strong>Ad Network</strong>.
+                            </div>
+                            <div class="item-info info-content">
+                              <ul>
+                                <li>
+                                  Responsible for building, controlling, and maintaining DMP, DSP, and Ad-network
+                                  portals
+                                </li>
+                                <li>
+                                  Participate in requirements analysis with PM/PO and CTO to clarify features,
+                                  streamline everything, and ease process development.
+                                </li>
+                                <li>
+                                  Do hands-on work as a senior FE developer using <strong>ReactJS</strong> and its
+                                  ecosystem (Redux, React-router, react-query,...).
+                                </li>
+                                <li>
+                                  Develop and maintain a <strong>Javascript SDK</strong> for tracking, user data
+                                  collection, and advertising display (based on the international standard OpenRTB).
                                 </li>
                               </ul>
                             </div>
