--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             <h5 class="item-title">Frontend Web Application Developer</h5>
                             <div class="item-info item-info-title">
                               <a href="https://infodation.com/" target="_blank">INFOdation Company</a>
-                              | Oct 2018 - Present
+                              | Oct 2018 - Aug 2021
                             </div>
                             <div class="item-info info-content">
                               <ul>
