--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="avatar-wrapper">
                   <div class="avatar">
                     <img
-                      src="assets/images/avatar.jpg"
+                      src="assets/images/avatar.png"
                       class="figure-img img-fluid rounded"
                       alt="A generic square placeholder image with rounded corners in a figure."
                     />
@@ -265,13 +265,37 @@
                             </div>
                           </div>
                         </div>
+                        <div class="col-md-12">
+                          <div class="education-item">
+                            <h5 class="item-title">Senior Frontend Developer</h5>
+                            <div class="item-info item-info-title">
+                              <a href="javscript:;">S.C Australia Company</a>
+                              | Aug 2022 - Present
+                            </div>
+                            <div class="item-info info-content">
+                              <ul>
+                                <li>
+                                  Responsible for developing and maintaining features in the Finance platform using
+                                  NextJS and Typescript to build the User interface in accordance with the design
+                                  specified by the design team.
+                                </li>
+                                <li>Building New APIs with NestJS and MongoDB</li>
+                                <li>Code of peer review with another teammate</li>
+                                <li>Support teammates to solve difficult problems</li>
+                                <li>Communicate closely with customers to clarify requirements</li>
+                                <li>Work on Agile Scum model daily</li>
+                                <li>CI/CD deployment with Jenkins</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
                         <!-- DEEPCACTUS -->
                         <div class="col-md-12">
                           <div class="education-item">
                             <h5 class="item-title">Frontend Developer</h5>
                             <div class="item-info item-info-title">
                               <a href="javscript:;">DEEPCACTUS Ltd, Hanoi - Vietnam Company</a>
-                              | Aug 2021 - Present
+                              | Aug 2021 - Aug 2022
                             </div>
                             <div>
                               A start-up digital advertiser, marketing, recommendation company. Specializes in platforms
@@ -296,6 +320,7 @@
                                   Develop and maintain a <strong>Javascript SDK</strong> for tracking, user data
                                   collection, and advertising display (based on the international standard OpenRTB).
                                 </li>
+                                <li>CI/CD deployment with Gitlab</li>
                               </ul>
                             </div>
                           </div>
